# Catalyst

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: catalyst.yml  ci.yml
scripts/: releases.sh
src/: benchmark.cpp  benchmark.h  bitboard.cpp  bitboard.h  board.cpp  board.h  datagen.cpp  datagen.h  evaluate.cpp  evaluate.h  intrinsics.h  main.cpp  movegen.cpp  movegen.h  movepick.cpp  movepick.h  nnue.cpp  nnue.h  search.cpp  search.h  simd.h  thread.cpp  thread.h  timeman.cpp  timeman.h  tt.cpp  tt.h  types.h  uci.cpp  uci.h
